# socialmodenv

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: social_mod_env.py
server/: app.py
